--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,8 @@
 
 
 .head, img {
+  max-width: 100%;
+  height: auto;
      width: 800px;
     height: 300px; 
     display: block;   /* Convierte la imagen en bloque */
